--- a/RTOS-Project.ioc
+++ b/RTOS-Project.ioc
@@ -2,82 +2,82 @@
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
 FREERTOS.Queues01=Sensor1Queue,1,float,0,Dynamic,NULL,NULL;Sensor2Queue,1,float,0,Dynamic,NULL,NULL;P1TelemetryQueue,1,float,0,Dynamic,NULL,NULL;P2TelemetryQueue,1,float,0,Dynamic,NULL,NULL;MissionDataQueue,1,int,0,Dynamic,NULL,NULL;MewMissionP1Queue,1,int,0,Dynamic,NULL,NULL;MewMissionP2Queue,1,int,0,Dynamic,NULL,NULL;MpuDataQueue,1,uint32_t,0,Dynamic,NULL,NULL;MissionTimerQueue,1,uint32_t,0,Dynamic,NULL,NULL;TimerSettingsQueue,1,int,0,Dynamic,NULL,NULL
-USART2.IPParameters=VirtualMode,BaudRate
 RCC.CortexFreq_Value=180000000
 FREERTOS.BinarySemaphores01=P1ITSem,Dynamic,NULL;P2ITSem,Dynamic,NULL;MissionTimerSem,Dynamic,NULL;TelemetryThreadSem,Dynamic,NULL
-Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F446RETx
-Dma.I2C2_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PC9.GPIO_PuPdOD=GPIO_NOPULL
 PB10.Mode=I2C
-NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true
 RCC.PLLCLKFreq_Value=180000000
+PC10.Signal=USART3_TX
 PC12.Signal=I2C2_SDA
 RCC.PLLQCLKFreq_Value=180000000
 PA12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_DAC_Init-DAC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=OutputTimer
 RCC.PLLI2SRCLKFreq_Value=96000000
 PA11.GPIO_PuPd=GPIO_PULLDOWN
+PC5.Mode=Asynchronous
 PC13.GPIO_Label=USER_BUTTON
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.SAIAFreq_Value=96000000
 PinOutPanel.RotationAngle=0
-Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI13.0=GPIO_EXTI13
+Dma.I2C2_TX.3.Mode=DMA_NORMAL
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
-Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-Mcu.IP4=I2C1
-Mcu.IP5=I2C2
+Mcu.IP4=I2C2
+Mcu.IP5=I2C3
 RCC.FCLKCortexFreq_Value=180000000
 Mcu.IP2=DMA
-I2C1.IPParameters=I2C_Mode
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP3=FREERTOS
-Dma.I2C3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Mcu.IP0=CRC
 PA12.Locked=true
 Mcu.IP1=DAC
-Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.2.Priority=DMA_PRIORITY_LOW
 PA12.Signal=GPIO_Output
+Dma.I2C3_RX.1.Instance=DMA1_Stream1
+USART3.BaudRate=500000
 Mcu.UserConstants=
-Dma.I2C3_TX.1.Mode=DMA_NORMAL
+Dma.I2C3_RX.1.MemInc=DMA_MINC_ENABLE
 SH.GPXTI13.ConfNb=1
 Mcu.ThirdPartyNb=0
 RCC.SDIOFreq_Value=180000000
 RCC.HCLKFreq_Value=180000000
-Mcu.IPNb=13
+Mcu.IPNb=12
 TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=180000000
 RCC.SPDIFRXFreq_Value=180000000
+Dma.I2C2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 PA8.GPIOParameters=GPIO_PuPdOD
-Mcu.Pin6=PA6
+Mcu.Pin6=PC5
 TIM7.Period=49999
-Mcu.Pin7=PC4
+Mcu.Pin7=PB10
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-Mcu.Pin8=PB10
-Mcu.Pin9=PB12
+Mcu.Pin8=PB12
+Mcu.Pin9=PC9
 RCC.VCOSAIOutputFreq_Value=192000000
-Dma.I2C3_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,BinarySemaphores01
 FREERTOS.configMINIMAL_STACK_SIZE=256
+Dma.I2C3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 RCC.AHBFreq_Value=180000000
 Mcu.Pin0=PC13
 Mcu.Pin1=PC2
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-Mcu.Pin5=PA5
+Mcu.Pin5=PC4
 PA12.PinState=GPIO_PIN_SET
 I2C3.IPParameters=OwnAddress,GeneralCallMode
 ProjectManager.ProjectBuild=false
@@ -85,43 +85,40 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA4.Locked=true
 PC12.GPIO_PuPdOD=GPIO_NOPULL
-Mcu.IP10=TIM2
+Mcu.IP10=TIM7
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-Mcu.IP12=USART2
-Mcu.IP11=TIM7
-Dma.I2C3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Mcu.IP11=USART3
 PB12.GPIO_Label=DirectionP2
+Dma.I2C3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.I2C2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 NVIC.I2C3_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 MxDb.Version=DB.6.0.21
-Dma.I2C3_RX.2.Instance=DMA1_Stream1
+Dma.I2C3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
-Dma.I2C3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.BackupPrevious=false
 RCC.VCOInputFreq_Value=2000000
+Dma.I2C2_TX.3.Priority=DMA_PRIORITY_LOW
 PC4.GPIO_Label=Alive_backup
-Dma.I2C2_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PA8.GPIO_PuPdOD=GPIO_NOPULL
-Dma.I2C2_RX.3.Priority=DMA_PRIORITY_LOW
 VP_SYS_VS_tim1.Mode=TIM1
+Dma.I2C2_TX.3.PeriphInc=DMA_PINC_DISABLE
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 File.Version=6
 PA10.GPIO_Label=GreenLED
 PC13.GPIO_PuPd=GPIO_NOPULL
 PC9.Mode=I2C
-PA8.Signal=I2C3_SCL
+Dma.I2C2_RX.2.Mode=DMA_NORMAL
 PB8.Locked=true
+PA8.Signal=I2C3_SCL
 RCC.PLLRCLKFreq_Value=180000000
-Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
-Dma.I2C3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-Dma.I2C2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.RequestsNb=5
-Dma.USART2_TX.0.Instance=DMA1_Stream6
+Dma.RequestsNb=4
 ProjectManager.HalAssertFull=false
 ProjectManager.ProjectName=RTOS-Project
+Dma.I2C3_TX.0.Priority=DMA_PRIORITY_LOW
 NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.MCO2PinFreq_Value=180000000
 PB9.Signal=I2C1_SDA
@@ -129,99 +126,88 @@ Mcu.Package=LQFP64
 TIM2.Prescaler=1
 PA6.Signal=GPIO_Output
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
-Dma.I2C2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C2_TX.4.PeriphInc=DMA_PINC_DISABLE
-USART2.VirtualMode=VM_ASYNC
-Dma.I2C3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 SH.COMP_DAC1_group.ConfNb=1
 ProjectManager.ToolChainLocation=
 NVIC.TimeBaseIP=TIM1
+USART3.IPParameters=VirtualMode,BaudRate
 PA10.Signal=GPIO_Output
 FREERTOS.FootprintOK=true
-Dma.I2C3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_TX.0.Mode=DMA_NORMAL
-Dma.I2C3_RX.2.MemInc=DMA_MINC_ENABLE
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-Dma.I2C3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.I2C2_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_RX.3.Mode=DMA_NORMAL
-Dma.Request2=I2C3_RX
+Dma.Request2=I2C2_RX
+Dma.I2C2_RX.2.Instance=DMA1_Stream2
 RCC.CECFreq_Value=32786.88524590164
-Dma.Request1=I2C3_TX
+Dma.Request1=I2C3_RX
 RCC.APB1TimFreq_Value=90000000
-Dma.Request4=I2C2_TX
-Dma.Request3=I2C2_RX
+Dma.Request3=I2C2_TX
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC4.Locked=true
+PC5.Signal=USART3_RX
+Dma.I2C3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PB10.GPIOParameters=GPIO_PuPdOD
 PA12.GPIO_PuPd=GPIO_NOPULL
-Dma.I2C2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 RCC.SAIBFreq_Value=96000000
-Dma.Request0=USART2_TX
-NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+Dma.Request0=I2C3_TX
+Dma.I2C3_TX.0.MemInc=DMA_MINC_ENABLE
 PC2.GPIO_Label=InputInterrupt
 NVIC.TIM7_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.PLLSAIQCLKFreq_Value=96000000
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PA3.Signal=USART2_RX
 PA6.GPIOParameters=GPIO_Label
 SH.COMP_DAC2_group.ConfNb=1
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
-Dma.I2C3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ProjectManager.ProjectFileName=RTOS-Project.ioc
-FREERTOS.Tasks01=defaultTask,-2,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;InitTask,1,512,InitTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,512,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL;MissionTimerTas,2,256,MissionTimerTaskFunc,Default,NULL,Dynamic,NULL,NULL
-Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
+FREERTOS.Tasks01=defaultTask,-2,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ThreadP1,0,256,P1EntryFunc,Default,NULL,Dynamic,NULL,NULL;ThreadP2,0,256,P2EntryFunc,Default,NULL,Dynamic,NULL,NULL;SensorRead,0,256,SensorReadFunc,Default,NULL,Dynamic,NULL,NULL;OrchestratorTas,1,256,OrchestratorTaskFunc,Default,NULL,Dynamic,NULL,NULL;TelemetryThread,-1,256,TelemetryThreadFunc,Default,NULL,Dynamic,NULL,NULL;MissionTimerTas,2,256,MissionTimerTaskFunc,Default,NULL,Dynamic,NULL,NULL
 Mcu.PinsNb=23
-Dma.I2C2_RX.3.Instance=DMA1_Stream2
 I2C3.OwnAddress=2
 ProjectManager.NoMain=false
 PC4.GPIO_PuPd=GPIO_NOPULL
 PC13.Locked=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
+Dma.I2C2_TX.3.Instance=DMA1_Stream7
 PC13.Signal=GPXTI13
 RCC.FMPI2C1Freq_Value=45000000
+Dma.I2C3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C3_TX.0.Mode=DMA_NORMAL
 PB10.GPIO_PuPdOD=GPIO_NOPULL
 RCC.VCOI2SInputFreq_Value=1000000
-PC2.Signal=GPXTI2
 PC4.Signal=GPIO_Output
+PC2.Signal=GPXTI2
+PC10.Mode=Asynchronous
 PA11.GPIO_Label=DirectionP1
-Dma.I2C2_RX.3.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.DefaultFWLocation=true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 PB12.Locked=true
-Dma.I2C2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ProjectManager.DeletePrevious=true
 FREERTOS.CountingSemaphores01=CountingSemaphore,2,Dynamic,NULL
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-USART2.BaudRate=500000
+Dma.I2C3_TX.0.Instance=DMA1_Stream4
+Dma.I2C2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA12.GPIO_Label=Alive
+Dma.I2C3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 RCC.FamilyName=M
 PC12.GPIOParameters=GPIO_PuPdOD
-Dma.I2C2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-PA3.Mode=Asynchronous
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 I2C3.GeneralCallMode=I2C_GENERALCALL_ENABLE
-Dma.I2C3_RX.2.Mode=DMA_NORMAL
 PA11.Locked=true
 SH.GPXTI2.ConfNb=1
 ProjectManager.TargetToolchain=STM32CubeIDE
-I2C1.I2C_Mode=I2C_Standard
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-PB9.Mode=I2C
 PB9.Locked=true
 NVIC.I2C2_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
-Dma.I2C2_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.USBFreq_Value=180000000
+Dma.I2C2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 PB10.Signal=I2C2_SCL
+Dma.I2C3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 RCC.VCOI2SOutputFreq_Value=192000000
 PA5.Signal=COMP_DAC2_group
+Dma.I2C2_RX.2.PeriphInc=DMA_PINC_DISABLE
 PC12.Mode=I2C
 RCC.PLLSAIPCLKFreq_Value=96000000
 TIM7.Prescaler=1799
@@ -230,88 +216,85 @@ RCC.VCOOutputFreq_Value=360000000
 ProjectManager.LastFirmware=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 RCC.APB2Freq_Value=90000000
+Dma.I2C3_RX.1.PeriphInc=DMA_PINC_DISABLE
 TIM7.IPParameters=Period,Prescaler
 MxCube.Version=6.2.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+Dma.I2C2_TX.3.MemInc=DMA_MINC_ENABLE
 RCC.PLLI2SPCLKFreq_Value=96000000
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+Dma.I2C3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-Dma.I2C2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
 PA10.GPIOParameters=GPIO_Label
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Dma.I2C2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C2_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.I2C3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 PC2.GPIO_PuPd=GPIO_PULLDOWN
 TIM2.Period=899999
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 PC9.GPIOParameters=GPIO_PuPdOD
-Dma.I2C3_TX.1.Instance=DMA1_Stream4
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F446R(C-E)Tx
 RCC.PLLI2SQCLKFreq_Value=96000000
-Dma.I2C3_TX.1.MemInc=DMA_MINC_ENABLE
 NVIC.SavedPendsvIrqHandlerGenerated=true
-PA2.Signal=USART2_TX
 ProjectManager.UnderRoot=true
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IP6=I2C3
-Mcu.IP7=NVIC
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IP6=NVIC
+Dma.I2C3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Mcu.IP7=RCC
 RCC.VCOSAIInputFreq_Value=1000000
 ProjectManager.CoupleFile=true
 PA4.Signal=COMP_DAC1_group
-Dma.I2C3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 RCC.SYSCLKFreq_VALUE=180000000
 Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin20=VP_SYS_VS_tim1
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Dma.I2C3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
-Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 PA10.Locked=true
+Dma.I2C2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+USART3.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Dma.I2C3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_TX.4.Instance=DMA1_Stream7
 ProjectManager.CompilerOptimize=6
 PA11.Signal=GPIO_Output
+Dma.I2C2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PC12
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Mcu.Pin16=PB8
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
+Mcu.Pin13=PA12
+Mcu.Pin14=PC10
 Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
+Dma.I2C3_RX.1.Priority=DMA_PRIORITY_LOW
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB9
 NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Mcu.Pin18=VP_CRC_VS_CRC
+Dma.I2C2_RX.2.MemInc=DMA_MINC_ENABLE
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA8
-Mcu.Pin12=PA10
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
 RCC.PLLM=8
-PB8.Mode=I2C
+Dma.I2C3_RX.1.Mode=DMA_NORMAL
 NVIC.I2C3_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 RCC.PLLN=180
-Mcu.Pin10=PC9
+Mcu.Pin10=PA8
 PB8.Signal=I2C1_SCL
-PA2.Mode=Asynchronous
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 RCC.PWRFreq_Value=180000000
 PA8.Mode=I2C
 PC9.Signal=I2C3_SDA
 RCC.APB1Freq_Value=45000000
 VP_CRC_VS_CRC.Mode=CRC_Activate
+Dma.I2C3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 ProjectManager.DeviceId=STM32F446RETx
 PB12.GPIOParameters=GPIO_Label
-Dma.I2C3_RX.2.PeriphInc=DMA_PINC_DISABLE
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
 PA6.Locked=true
-Dma.I2C2_TX.4.Mode=DMA_NORMAL
 isbadioc=false
